# aoc

./: .gitignore  aoc.ts  package-lock.json
01/: index.ts
2022/ts/days/: 03.ts  06.ts  08.ts
2023/haskell/: aoc.cabal
2023/haskell/src/: 01_1.hs  01_2.hs  02_1.hs  02_2.hs  03_1.hs  03_2.hs  04_1.hs  04_2.hs
2024/cpp/: .clang-format  .clang-tidy  utility.hpp  xmake.lua
2024/cpp/days/01/: 01.cpp  02.cpp  2.cpp
2024/cpp/days/02/: 01.cpp  02.cpp  2.cpp
2024/cpp/days/03/: 01.cpp  02.cpp
2024/cpp/days/04/: 1.cpp  2.cpp
2024/cpp/days/05/: 01.cpp  02.cpp
2024/cpp/days/06/: 02.cpp  1.cpp
2024/cpp/days/07/: 01.cpp  02.cpp  2.cpp
2024/cpp/days/08/: 01.cpp  02.cpp
2024/cpp/days/09/: 02.cpp  1.cpp
2024/cpp/days/10/: 01.cpp  02.cpp  2.cpp
2024/cpp/days/11/: 01.cpp  02.cpp
2024/cpp/days/12/: 1.cpp  2.cpp
2024/cpp/days/13/: 1.cpp  2.cpp
2024/cpp/days/14/: 01.cpp  2.cpp
2024/cpp/days/15/: 01.cpp  02.cpp
2024/cpp/days/16/: 1.cpp  2.cpp
2024/cpp/days/17/: 1.cpp  2.cpp
2024/cpp/days/18/: 1.cpp  2.cpp
2024/cpp/days/19/: 1.cpp  2.cpp
2024/cpp/days/20/: 1.cpp  2.cpp
2024/cpp/days/21/: 1.cpp  2.cpp
2024/cpp/days/22/: 1.cpp  2.cpp
2024/cpp/days/23/: 1.cpp  2.cpp
2024/cpp/days/24/: 1.cpp
2024/cpp/days/25/: 1.cpp
2024/cpp/include/: file.hpp  grid.hpp  to_string.hpp  vector.hpp  vector2.hpp  vector_common.hpp
days/: 01.ts  02.ts  04.ts  05.ts  07.ts  09.ts
