cabal-version:      3.0
name:               aoc
version:            0.0.0.0

common warnings
    ghc-options: -Wall

common executable
    import:           warnings
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: GHC2021

executable 01_1
    import:  executable
    main-is: 01_1.hs

executable 01_2
    import:  executable
    main-is: 01_2.hs
